wdb-bilload (1.0.0-1) lucid; urgency=high

  * Initial release of the debian package for the BIL file loader in wdb. 

 -- Michael Akinde <wdb@met.no>  Wed, 30 Mar 2011 12:00:00 +0000

wdb-bilload (0.9.8-1) lucid; urgency=medium

  * Initial release of the debian package for the BIL file loader in wdb. 

 -- Michael Akinde <wdb@met.no>  Thu, 27 Jan 2011 12:00:00 +0000